Fix dark mode

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -2,24 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #E4E4E4;
-  --foreground: #3E3E3E;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #3E3E3E;
-    --background-sec: rgba(130,130,130,1);
-    --foreground: #E4E4E4;
-    /* --text-active: #8C1F1F; */
-    --text-active: #E62634;
-    --inactive: grey;
-    --bg-active: #A8BFA4;
-    --text: #3E3E3E;
-    --green: #387336;
-    --white: #E4E4E4;
-  }
+:root {
+  --background: #3E3E3E;
+  --background-sec: rgba(130,130,130,1);
+  --foreground: #E4E4E4;
+  /* --text-active: #8C1F1F; */
+  --text-active: #E62634;
+  --inactive: grey;
+  --bg-active: #A8BFA4;
+  --text: #3E3E3E;
+  --green: #387336;
+  --white: #E4E4E4;
 }
 
 body {
